--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
     "pdf-parse": "^1.1.1",
-    "pdfbusqueda": "file:"
+    "pdfbusqueda": "file:",
+    "readable-stream": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
